--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-function setup(){
-    createCanvas(300,300);
-    background(255,0,0);
-    fill(150);
-    ellipse(100,100,50,50);
-    fill(0);
-    textSize(20);
-    text("Halló heimur",200,40);
-}
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Hello world</h1>
+<p>I exist now.<p>
+</body>
+</html>
