--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <ul>
       <li><a href = "P0-HalloHeimur/index.html">P0 - Halló heimur</a> </li>
+      <li><a href = "P2-Andlit/index.html">P0 - Halló heimur</a> </li>
     </ul>
     </div>
   </body>
