--- a/P2-Andlit/index.html
+++ b/P2-Andlit/index.html
@@ -1,24 +1,10 @@
-var eyeSize = 20;
-var faceWidth = 100;
-var faceHeight = 150;
-var x = 150;
-var y = 150;
-
-function setup(){
-  createCanvas (300,300);
-}
-
-function draw(){
-  background(180);
-  ellipse(x, y, faceWidth, faceHeight);
-
-  //.....kóði sem staðsetur augun m.v. x, y, faceWidth og faceHeight ætti að koma hér.
-
-}
-
-function mousePressed(){
-  //Í hvert sinn sem músinni er smellt fá breyturnar ný gildi.
-  faceWidth  = random(75,  150);
-  faceHeight = random(100, 200);
-  eyeSize    = random(10,  30);
-}
+<html>
+  <head>
+    <!-- Ãžessari sÃ­Ã°u skaltu ekki breyta -->
+    <meta charset="UTF-8">
+    <script src="face.js"></script>
+    <style> body {padding: 0; margin: 0;} </style>
+  </head>
+  <body>
+  </body>
+</html>
