--- a/P2-Andlit/index.html
+++ b/P2-Andlit/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Þessari síðu skaltu ekki breyta -->
     <meta charset="UTF-8">
+    <script src="../p5.min.js"></script>
     <script src="face.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
