--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <ul>
       <li><a href = "P0-HalloHeimur/index.html">P0 - Halló heimur</a> </li>
-      <li><a href = "P1-Malverk/index.html">P1 - Málverk</a> </li>
+      <li><a href = "P1-Málverk/index.html">P1 - Málverk</a> </li>
       <li><a href = "P2-Andlit/index.html">P2 - Andlit</a> </li>
     </ul>
     </div>
