--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href = "P0-HalloHeimur/index.html">P0 - Halló heimur</a> </li>
       <li><a href = "P1-Málverk/index.html">P1 - Málverk</a> </li>
       <li><a href = "P2-Andlit/index.html">P2 - Andlit</a> </li>
+      <li><a href = "P3-Lykkjulyst/index.html">P3 - Lykkjulyst</a> </li>
     </ul>
     </div>
   </body>
