--- a/P3b-Lykkjuverk/index.html
+++ b/P3b-Lykkjuverk/index.html
@@ -4,7 +4,7 @@
     <!-- Þessari síðu skaltu ekki breyta -->
     <meta charset="UTF-8">
     <script src="../p5.min.js"></script>
-    <script src="lykkjuverk.js"></script>
+    <script src="lykkjuthingy.js"></script>
     <style> body {padding: 0; margin: 0;} </style>
   </head>
   <body>
