--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href = "P3-Lykkjulyst/index.html">P3 - Lykkjulyst</a> </li>
       <li><a href = "P4-Skjáskipting/index.html">P4 - Skjáskipting</a> </li>
       <li><a href = "P5-Spraetur/index.html">P5 - Sprætur</a> </li>
+      <li><a href = "P5-Skopp/index.html">P6 - Skopp</a> </li>
     </ul>
     </div>
   </body>
