--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href = "P1-Málverk/index.html">P1 - Málverk</a> </li>
       <li><a href = "P2-Andlit/index.html">P2 - Andlit</a> </li>
       <li><a href = "P3-Lykkjulyst/index.html">P3 - Lykkjulyst</a> </li>
+      <li><a href = "P3b-Lykkjuverk/index.html">P3b - Lykkjuverk</a> </li>
       <li><a href = "P4-Skjáskipting/index.html">P4 - Skjáskipting</a> </li>
       <li><a href = "P5-Spraetur/index.html">P5 - Sprætur</a> </li>
       <li><a href = "P5-Skopp/index.html">P6 - Skopp</a> </li>
