--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href = "P4-Skjáskipting/index.html">P4 - Skjáskipting</a> </li>
       <li><a href = "P5-Spraetur/index.html">P5 - Sprætur</a> </li>
       <li><a href = "P6-Skopp/index.html">P6 - Skopp</a> </li>
+      <li><a href = "P7-Fígúra/index.html">P7 - Fígúra</a> </li>
     </ul>
     </div>
   </body>
