--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href = "P6-Skopp/index.html">P6 - Skopp</a> </li>
       <li><a href = "P7-Fígúra/index.html">P7 - Fígúra</a> </li>
       <li><a href = "P8-Fígúra fær líf/index.html">P8 - Fígúra fær líf</a> </li>
+      <li><a href = "P9-Lífríki/index.html">P9 - Lífríki</a> </li>
     </ul>
     </div>
   </body>
